--- a/index.html
+++ b/index.html
@@ -109,9 +109,60 @@
         <p class="explore">Explore our wide selection of high-quality cars.</p>
       </div>
       <div class="collage">
-        <div class="sedan"></div>
-        <div class="coupe"></div>
-        <div class="suv"></div>
+        <div class="sedan2">
+          <div class="sedan1">
+            <img src="green.jpg" alt="car" width="100%" />
+            <div class="partition">
+              <h4>LUXURY SEDAN</h4>
+              <h6>Black</h6>
+              <h5>$55,000</h5>
+            </div>
+          </div>
+          <div class="sedan1">
+            <img src="red.jpg" alt="car" width="100%" />
+            <div class="partition">
+              <h4>CONVERTIBLE</h4>
+              <h6>Black</h6>
+              <h5>$55,000</h5>
+            </div>
+          </div>
+          <div class="sedan1">
+            <img src="ash.jpg" alt="car" width="100%" />
+            <div class="partition">
+              <h4>ELECTRIC SUV</h4>
+              <h6>Black</h6>
+              <h5>$55,000</h5>
+            </div>
+          </div>
+
+          </div>
+        </div>
+        <div class="house">
+          <div class="sedan">
+            <img src="div1.jpg" alt="car" width="100%" />
+            <div class="partition">
+              <h4>HATCHBACK</h4>
+              <h6>Black</h6>
+              <h5>$55,000</h5>
+            </div>
+          </div>
+          <div class="sedan">
+            <img src="BLACK.jpg" alt="car" width="100%" />
+            <div class="partition">
+              <h4>LUXURY SEDAN</h4>
+              <h6>Black</h6>
+              <h5>$55,000</h5>
+            </div>
+          </div>
+          <div class="sedan">
+            <img src="light.jpg" alt="light" width="100%" />
+            <div class="partition">
+              <h4>LUXURY SEDAN</h4>
+              <h6>Black</h6>
+              <h5>$55,000</h5>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
